--- a/datomisca/samples/sample-angular/app/views/index.scala.html
+++ b/datomisca/samples/sample-angular/app/views/index.scala.html
@@ -5,6 +5,8 @@
     <div ng-controller="PersonCtrl">
       <label for="name">name:</label><input ng-model="createForm.name"/>
       <label for="age">age:</label><input ng-model="createForm.age" type="number"/>
+      <label for="characters">character:</label><select ng-model="createForm.characters" multiple="true" ng-options='c for c in charactersIn'>
+      </select>
       <button ng-click="create()">Create new person</button>
       <hr/>
       <table>
@@ -13,6 +15,8 @@
         <tr>
           <td><input ng-model="person.name"/></td>
           <td><input type="number" ng-model="person.age"/></td>
+          <td><select multiple="true" ng-options='c for c in charactersOut' ng-model="person.characters">
+          </select></td>
           <td><button ng-click="update(person)">Update</button><button ng-click="remove(person)">Delete</button></td>
         </tr>
       </tbody>
